# learning_pod

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  env.template  example_input.md  pyproject.toml
.github/workflows/: ci.yml  claude-ci-fix.yml  claude-docs.yml  claude-issue-impl.yml  claude-pr-review.yml  claude-release-notes.yml  claude.yaml
docs/: claude-automation-setup.md
scripts/: setup-labels.sh
src/learnpod/: __init__.py  cli.py  config.py
src/learnpod/email/: __init__.py  sender.py
src/learnpod/generator/: __init__.py  llm_client.py  prompt_builder.py  splitter.py  tts_client.py
src/learnpod/pipeline/: __init__.py  build_audio.py  build_explainer.py  build_questions.py  build_script.py  ingest.py  orchestrator.py
src/learnpod/utils/: __init__.py  logger.py
